isBlank() is not available in java 8